<resources>
    <string name="app_name">LifeCounter</string>
    <string name="app_version">v1.8.2</string>

    <string name="color_black">Black</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_red">Red</string>
    <string name="color_white">White</string>

    <string name="setting_color_black">Black:</string>
    <string name="setting_color_blue">Blue:</string>
    <string name="setting_color_green">Green:</string>
    <string name="setting_color_red">Red:</string>
    <string name="setting_color_white">White:</string>
    <string name="setting_default_lives">Lifepoints:</string>
    <string name="setting_default_long_click_points">Points on hold (+/-):</string>
    <string name="setting_screen_timeout_disable">Disable screen timeout:</string>
    <string name="setting_show_intro">Show app-intro:</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="go">Go!</string>
    <string name="delete">Delete</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="settings_title">Settings</string>
    <string name="settings_cancel">Discard</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_confirm_reset">Reset all settings?</string>
    <string name="settings_confirm_reset_true">Yes</string>
    <string name="settings_confirm_reset_false">No</string>

    <string name="cmdPowerSaveEnable">Enable Power Saving</string>
    <string name="cmdPowerSaveDisable">Disable Power Saving</string>

    <string name="cmdTogglePlayerAmount2">Enter 4-Player Mode</string>
    <string name="cmdTogglePlayerAmount4">Enter 2-Player Mode</string>

    <string name="ndHeader">MTG LifeCounter</string>
    <string name="cmdAbout">About</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_entry_energysaving_enable">Enable Power Saving</string>
    <string name="menu_entry_energysaving_disable">Disable Power</string>
    <string name="menu_entry_load_players_2">Load 2 player mode</string>
    <string name="menu_entry_load_players_4">Load 4 player mode</string>
    <string name="menu_entry_settings">Settings</string>
    <string name="menu_entry_about">About</string>
    <string name="menu_entry_load_dicing">Dice</string>
    <string name="menu_entry_load_countermanager">Counter-Manager</string>
    <string name="menu_area_settings">Configuration</string>
    <string name="menu_area_general"></string>

    <string name="action_settings">Settings</string>

    <string name="preferences_cat_points">Points</string>
    <string name="preferences_cat_colors">Colors</string>
    <string name="preferences_cat_other">Other</string>
    <string name="preferences_points_lifepoints">Lifepoints</string>
    <string name="preferences_points_longclickpoints">Long Press (+/-)</string>
    <string name="preferences_color_black">Black</string>
    <string name="preferences_color_blue">Blue</string>
    <string name="preferences_color_green">Green</string>
    <string name="preferences_color_red">Red</string>
    <string name="preferences_color_white">White</string>
    <string name="preferences_other_timeout">Disable Screen Timeout</string>
    <string name="preferences_other_energysaving">Enable Powersave-Mode</string>
    <string name="preferences_default_lifepoints">20</string>
    <string name="preferences_default_longlickpoints">5</string>

    <string name="title_activity_counter">CounterActivity</string>
    <string name="counter_default_player1">Player 1</string>
    <string name="counter_default_player2">Player 2</string>
    <string name="counter_default_player3">Player 3</string>
    <string name="counter_default_player4">Player 4</string>

    <string name="dialog_countermanager_new_header">Edit entry</string>
    <string name="dialog_countermanager_hint_card_description">Designation</string>
    <string name="dialog_countermanager_error_invalid_entry">Invalid values!</string>
    <string name="dialog_countermanager_hint_atk">ATK</string>
    <string name="dialog_countermanager_hint_def">DEF</string>
    <string name="dialog_countermanager_separator">/</string>

    <string name="dialog_countermanager_delete_title">Delete Entry</string>
    <string name="dialog_countermanager_delete_message">Do you want to delete this entry?</string>
    <string name="dialog_countermanager_delete_multiple_message">Do you want to delete all entries for this player?</string>
    <string name="dialog_countermanager_delete_confirmation">Entry deleted</string>
    <string name="dialog_countermanager_edit_playername_title">Save player name</string>
    <string name="dialog_countermanager_edit_counter_error">Failed to update counter!</string>

    <string name="exc_invalid_object_player">Invalid player selected</string>
    <string name="exc_invalid_object_counter">Invalid counter selected</string>

    <string name="descr_lp_plus">Increase Lifepoints</string>
    <string name="descr_lp_minus">Decrease Lifepoints</string>
    <string name="descr_pp_plus">Increase Poisonpoints</string>
    <string name="descr_pp_minus">Decrease Poisonpoints</string>
    <string name="descr_pp_toggle">Toggle Poisonpoints</string>
    <string name="descr_settings_toggle">Toggle Settings</string>
    <string name="descr_reset">Reset Game</string>

    <string name="dialog_firstlaunch_heading">Hey there!</string>
    <string name="dialog_changelog_heading">New in Version 1.9</string>

    <string name="changelog">
        - 4 Player Mode\n
        - Dice-Functionality\n
        - Counter-Manager\n
    </string>

    <string name="firstlaunch">
        Glad you found my app! With the last update a lot has happened, so I would like to show you the news here.\n
        \n
        Dragging from the left edge of the screen to the right opens the menu. Here you find the access to the different functions and settings.\n
        \n
        You can switch between 2 and 4 player mode here. There is also a dice function and a counter manager.\n
        The latter is used to keep track of the +/- X tokens on your cards.\n
        \n
        If you have any suggestions or ideas for improvement, you are welcome to contact me by e-mail: feedback@mjurtz.com.\n
        \n
        Thank you!
    </string>

    <string name="intro_1_header">MTG LifeCounter</string>
    <string name="intro_1_description">Hey, thanks for buying pro! I\'d like to quickly guide you through the app, which you can skip by clicking the button in the bottom left corner.</string>

    <string name="lite_intro_1_header">MTG LifeCounter</string>
    <string name="lite_intro_1_description">Hey, thanks for downloading! I\'d like to quickly guide you through the app, which you can skip by clicking the button in the bottom left corner.</string>

    <string name="intro_2_header">Navigation</string>
    <string name="intro_2_description">By sliding from the left hand side of the screen to the right, you can open the menu.</string>

    <string name="intro_3_header">Settings</string>
    <string name="intro_3_description">The settings provide a way to customize several things like colors or default values as you like.</string>

    <string name="intro_4_header">Game</string>
    <string name="intro_4_description">The main view is used to manage games. You can select between 2- and 4-player modes. When closing the app, standings will be saved.</string>

    <string name="lite_intro_4_header">Game</string>
    <string name="lite_intro_4_description">The main view is used to manage games. When closing the app, standings will be saved.</string>

    <string name="intro_5_header">Energy Saving Mode</string>
    <string name="intro_5_description">If your phone has an AMOLED-Display, you can make use of the power-saving mode which darkens most of the main view.</string>

    <string name="intro_6_header">Dice</string>
    <string name="intro_6_description">the dice feature gives you the functionality of a 20-sided dice.</string>

    <string name="intro_7_header">Counter Manager</string>
    <string name="intro_7_description">With the counter management you can keep track of your +1 counters at all times.</string>

    <string name="intro_8_header">About</string>
    <string name="intro_8_description">That\'s it! If you have any feedback, improvement ideas or questions, I would be happy to hear from you. You can find my contact details in the about menu.</string>

    <string name="intro_pro_header">Go Pro</string>
    <string name="intro_pro_description">If you like my app, you can download the pro version from PlayStore. To find out more about the advantages of going pro, check out the details in the about menu.</string>

    <string name="about_pro_header">Go Pro</string>
    <string name="about_pro_content">
        If you like my app and want to support me as a developer, you can buy the Pro version from PlayStore.
        The Pro version includes the same features as the Standard version, but adds a 4-player mode and a +1 token management feature,
        so you don\'t have to keep checklists of the points on your cards.
    </string>
    <string name="about_pro_download"><u>Download Pro</u></string>

    <string name="about_lics_header">OpenSource-Licenses</string>

    <string name="about_lic_colorpicker_caption">Pes8 / Color Picker Dialog</string>
    <string name="about_lic_colorpicker_link"><u>https://github.com/Pes8/android-material-color-picker-dialog</u></string>

    <string name="about_lic_appintro_caption">Paolo Rotolo / AppIntro</string>
    <string name="about_lic_appintro_link"><u>https://github.com/PaoloRotolo/AppIntro</u></string>

    <string name="about_copyright">Copyright Marcel Jurtz 2016 - 2018</string>

    <string name="about_caption">LifeCounter</string>
    <string name="about_introduction">
        Hey, thanks for using my app! If you have any suggestions for improvement or found an error,
        I\'d be very happy to receive constructive feedback.

        To contact me, please use one of the following options:
    </string>
    <string name="about_changelog_header">Changelog</string>
    <string name="about_changelog_v2_header">01.12.2018</string>
    <string name="about_changelog_v2_content">
        - General improvements\n- New Pro-Version with additional features
    </string>

    <string name="contact_mail"><u>Mail: feedback@mjurtz.com</u></string>
    <string name="contact_twitter"><u>Twitter: @MarcelJurtz</u></string>
</resources>
