<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/navGroupGeneral">
        <item
            android:id="@+id/nav_energy_save_mode"
            android:icon="@drawable/ic_power_black_24dp"
            android:title="@string/menu_entry_energysaving_enable" />
        <item
            android:id="@+id/nav_useramount"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_entry_load_players_4" />

        <item
            android:id="@+id/nav_dicing"
            android:icon="@drawable/ic_casino_black_24dp"
            android:title="@string/menu_entry_load_dicing">

        </item>
    </group>

    <group android:id="@+id/navGroupConfig">
        <item android:title="@string/menu_area_settings">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_entry_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_entry_about" />
        </item>
    </group>
</menu>