<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/navGroupGeneral">
        <item
            android:id="@+id/nav_about_useramount_2"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_entry_load_players_2" />
        <item
            android:id="@+id/nav_about_useramount_4"
            android:icon="@drawable/ic_users"
            android:title="@string/menu_entry_load_players_4" />
        <item
            android:id="@+id/nav_about_dicing"
            android:icon="@drawable/ic_casino_black_24dp"
            android:title="@string/menu_entry_load_dicing" />
    </group>

    <group android:id="@+id/nav_dicing_GroupConfig">
        <item android:title="@string/menu_area_settings">
            <item
                android:id="@+id/nav_about_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_entry_settings" />
        </item>
    </group>
</menu>