<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:id="@+id/lblFirstLaunchHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/dialog_firstlaunch_heading" />

    <TextView
        android:id="@+id/lblFirstLaunchContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstlaunch"/>

    <Button
        android:id="@+id/cmdFirstLaunchClose"
        android:text="@string/ok"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>